--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,17 @@ buildscript {
     ext.kotlin_version = '1.2.41'
     ext.lifecycle_version = "1.1.1"
     ext.suport_version = '27.1.1'
+    ext.coroutines_version = '0.22.5'
+    ext.gradle_version = '3.1.3'
+    ext.retrofit_version = '2.3.0'
+    ext.retrofit_coroutines_version = '1.0.0'
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
