--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,17 +38,17 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support.constraint:constraint-layout:1.1.2"
 
-    implementation "com.android.support:design:$suport_version"
+    implementation "com.android.support:design:$support_version"
 
-    implementation "com.android.support:support-v4:$suport_version"
-    implementation "com.android.support:recyclerview-v7:$suport_version"
+    implementation "com.android.support:support-v4:$support_version"
+
+    implementation "com.android.support:recyclerview-v7:$support_version"
 
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
-    implementation "com.android.support:support-v4:27.1.1"
     kapt "com.android.databinding:compiler:3.1.3"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
@@ -58,6 +58,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:3.8.0"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:$retrofit_coroutines_version"
+
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    kapt 'com.github.bumptech.glide:compiler:4.4.0'
 
 
     testImplementation "junit:junit:4.12"
