--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.2.41'
     ext.lifecycle_version = "1.1.1"
-    ext.suport_version = '27.1.1'
+    ext.support_version = '27.1.1'
     ext.coroutines_version = '0.22.5'
     ext.gradle_version = '3.1.3'
     ext.retrofit_version = '2.3.0'
