- partial details screen - refactor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
             coroutines "enable"
         }
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
