- refactor - error page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Home">
         <activity
+            android:launchMode="singleTask"
             android:name=".presentation.MainActivity"
             android:screenOrientation="portrait">
 
